--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.css" />
-<link rel="stylesheet" href="css/salecodecolors.css" />
+<link rel="stylesheet" href="css/themes/v2/salecode.min.css" />
+<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile.structure-1.3.2.min.css" />
 
-<link rel="stylesheet" type="text/css" href="css/estilos_basicos.css">
 <link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
 <!-- SHA3 -->
 <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha3.js"></script>
 
-<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-<script src="http://code.jquery.com/mobile/1.2.1/jquery.mobile-1.2.1.min.js"></script>
+<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script> 
+<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script> 
 
 
 <!--
@@ -42,11 +41,11 @@
 
 		<div data-role="footer" class="ui-bar" data-position="fixed" data-id="footer1">
 			<div data-role="navbar">
-				<!--<ul>
-					<li><a href="#p2" data-icon="search" class="ui-btn-active">Explora</a></li>
-					<li><a href="#p2" data-icon="grid">Mis Eventos</a></li>
-					<li><a href="#p2" data-icon="star">Contactus</a></li>
-				</ul>-->
+				<ul>
+					<li><a href="tel:3173719437">Call us free!</a></li>
+					<!--<li><a href="#p2" data-icon="grid">Mis Eventos</a></li>
+					<li><a href="#p2" data-icon="star">Contactus</a></li>-->
+				</ul>
 			</div>
 		</div>
 	</div>
