--- a/indexsinlogo.html
+++ b/indexsinlogo.html
@@ -9,7 +9,6 @@
 
 <link rel="stylesheet" href="css/themes/v2/salecode.min.css" />
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile.structure-1.3.2.min.css" />
-<link rel="stylesheet" href="css/styles.css" />
 
 <link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
 <!-- SHA3 -->
@@ -28,29 +27,32 @@
 </head>
 
 <body>
-	<div data-role="page" data-theme="b" id="home">
+	<div data-role="page" data-theme="c" id="home">
 		<div data-role="header" >
-			<h1><img src="img/logoapp.png" alt="Logo SaleCode"></h1>
+			<h1></h1>
 		</div>
 
-		<div class="principal-content" data-role="content" data-theme="b">
+		<div data-role="content" data-theme="b">
 			<div id="loader-home"><img src="img/loader.gif" /></div>
-			<ul id="lista-inmuebles" data-role="listview" data-theme="b" data-filter="true" data-filter-placeholder="Digíta el SaleCode a consultar.">
+			<ul id="lista-inmuebles" data-role="listview" data-theme="c" data-filter="true" data-filter-placeholder="Digíta el SaleCode a consultar.">
 
 			</ul>
 		</div>	
 
 		<div data-role="footer" class="ui-bar" data-position="fixed" data-id="footer1">
 			<div data-role="navbar">
-
+				<ul>
+					<li><a href="tel:3173719437">Call us free!</a></li>
+					<!--<li><a href="#p2" data-icon="grid">Mis Eventos</a></li>
+					<li><a href="#p2" data-icon="star">Contactus</a></li>-->
+				</ul>
 			</div>
 		</div>
 	</div>
 
-	<div data-role="page" data-theme="a" id="infoinmueble" data-add-back-btn="true">
+	<div data-role="page" data-theme="c" id="infoinmueble" data-add-back-btn="true">
 		<div data-role="header" >
-			<h1>Sale Info</h1>
-			
+			<h1></h1>
 		</div>
 
 		<div data-role="content" data-theme="b">
@@ -64,18 +66,10 @@
 			
 		</div>	
 
-<!--Aqui arranca la barra de contacto -->
- 
-		<div data-role="footer" class="nav-glyphish-example" data-position="fixed">
-		    <div data-role="navbar" class="nav-glyphish-example" data-grid="b">
-		    <ul>
-		    	<li><a href="#home" data-icon="custom" id="home">Inicio</a></li> 
-		        <li><a href="tel:3173719437" id="call" data-icon="custom">Llamar Ahora</a></li>
-		        <li><a href="mailto:info@salecode.co?subject=Contacto Anuncio XXXX" id="email" data-icon="custom">Email</a></li>
-		    </ul>
-		    </div>
+		<div data-role="footer" class="ui-bar" data-position="fixed" data-id="footer1">
+			<div data-role="navbar">
+			</div>
 		</div>
-<!--Aqui finaliza la barra de contacto -->
 
 	</div>
 	<script type="text/javascript" src="js/micodigo.js"> </script>
