--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="css/themes/v2/salecode.min.css" />
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile.structure-1.3.2.min.css" />
 <link rel="stylesheet" href="css/styles.css" />
+<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
 
 <link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
 <!-- SHA3 -->
@@ -18,6 +19,7 @@
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script> 
 <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script> 
 
+</script>
 
 <!--
 <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.3.1.css">
@@ -56,7 +58,14 @@
 		<div data-role="content" data-theme="b">
 			<div id="loader-inmueble"><img src="img/loader.gif" /></div>
 			<article id="datos-top">
-				<img>
+				<section class="slider">
+        			<div class="flexslider">
+          				<ul class="slides">
+
+          				</ul>
+          			</div>
+          		</section>
+
 				<article>
 					
 				</article>
@@ -78,7 +87,28 @@
 <!--Aqui finaliza la barra de contacto -->
 
 	</div>
+
 	<script type="text/javascript" src="js/micodigo.js"> </script>
+	<script defer src="js/jquery.flexslider.js"></script>
+
+	  <script type="text/javascript">
+	    $(function(){
+	      SyntaxHighlighter.all();
+	    });
+	    $(window).load(function(){
+	      $('.flexslider').flexslider({
+	        animation: "slide",
+	        start: function(slider){
+	          $('body').removeClass('loading');
+	        }
+	      });
+	    });
+	  </script>
+
+	    <!-- Syntax Highlighter -->
+    <script type="text/javascript" src="js/shCore.js"></script>
+    <script type="text/javascript" src="js/shBrushXml.js"></script>
+    <script type="text/javascript" src="js/shBrushJScript.js"></script>
 
 </body>
 
