icon bug fixed and fonts icon added

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		<div data-role="footer" class="nav-glyphish-example" data-position="fixed">
 		    <div data-role="navbar" class="nav-glyphish-example" data-grid="b">
 		    <ul>
-		    	<li><a href="#home" data-icon="custom" id="home">Inicio</a></li> 
+		    	<li><a href="#home" data-icon="custom" id="home-icon">Inicio</a></li> 
 		        <li><a href="tel:3173719437" id="call" data-icon="custom">Llamar Ahora</a></li>
 		        <li><a href="mailto:info@salecode.co?subject=Contacto Anuncio XXXX" id="email" data-icon="custom">Email</a></li>
 		    </ul>
