references to css and js file updated - local references

--- a/index.html
+++ b/index.html
@@ -7,17 +7,13 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 
+<link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css" />
 <link rel="stylesheet" href="css/themes/v2/salecode.min.css" />
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile.structure-1.3.2.min.css" />
 <link rel="stylesheet" href="css/styles.css" />
 <link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
 
-<link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
-<!-- SHA3 -->
-<script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/sha3.js"></script>
-
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script> 
-<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script> 
+<script src="js/jquery-1.10.1.min.js"></script> 
+<script src="js/jquery.mobile-1.3.2.min.js"></script> 
 
 </script>
 
@@ -79,8 +75,8 @@
 		    <div data-role="navbar" class="nav-glyphish-example" data-grid="b">
 		    <ul>
 		    	<li><a href="#home" data-icon="custom" id="home-icon">Inicio</a></li> 
-		        <li><a href="tel:3173719437" id="call" data-icon="custom">Llamar Ahora</a></li>
-		        <li><a href="mailto:info@salecode.co?subject=Contacto Anuncio XXXX" id="email" data-icon="custom">Email</a></li>
+		        <li><a href="tel:3158186560" id="call" data-icon="custom">Llamar Ahora</a></li>
+		        <li><a href="mailto:info@salecode.co?subject=Contacto Anuncio" id="email" data-icon="custom">Email</a></li>
 		    </ul>
 		    </div>
 		</div>
