error message added

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			<ul id="lista-inmuebles" data-role="listview" data-theme="b" data-filter="true" data-filter-placeholder="Digíta el SaleCode a consultar.">
 
 			</ul>
+			<p id="msj-error"></p>
 		</div>	
 
 		<div data-role="footer" class="ui-bar" data-position="fixed" data-id="footer1">
