message reload added

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 				
 			</div>
 			<ul id="lista-inmuebles" data-role="listview" data-theme="b" data-filter="true" data-filter-placeholder="Digíta el SaleCode a consultar.">
+				<li>
+					<a onclick="reload()" href="">Haga clic en recargar.</a>
+				</li>
 
 			</ul>
 
