telephone number change

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<meta charset="UTF-8">	
+<meta charset="UTF-8">
 <title>SaleCode</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
@@ -35,7 +35,6 @@
 		<div class="principal-content" data-role="content" data-theme="b">
 			<div id="loader-home"><img src="img/loader.gif" /></div>
 			<div id="error-wrap">
-				
 			</div>
 			<ul id="lista-inmuebles" data-role="listview" data-theme="b" data-filter="true" data-filter-placeholder="Digíta el SaleCode a consultar.">
 				<li>
@@ -44,7 +43,7 @@
 
 			</ul>
 
-		</div>	
+		</div>
 
 		<div data-role="footer" class="ui-bar" data-position="fixed" data-id="footer1">
 			<div data-role="navbar">
@@ -55,8 +54,7 @@
 
 	<div data-role="page" data-theme="a" id="infoinmueble" data-add-back-btn="true">
 		<div data-role="header" >
-			<h1>Sale Info</h1>
-			
+			<h1>Photo Album</h1>
 		</div>
 
 		<div data-role="content" data-theme="b">
@@ -71,14 +69,11 @@
           		</section>
 
 				<article>
-					
 				</article>
 			</article>
-			
 		</div>	
 
 <!--Aqui arranca la barra de contacto -->
- 
 		<div data-role="footer" class="nav-glyphish-example" data-position="fixed">
 		    <div data-role="navbar" class="nav-glyphish-example" data-grid="b">
 		    <ul>
