--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<div data-role="page" data-theme="b" id="home">
 		<div data-role="header" >
 			<h1><img src="img/logoapp.png" alt="Logo SaleCode"></h1>
-			<a data-icon="refresh" data-theme="b" onclick="reload()" class="ui-btn-right">Recargar</a>
+			<a data-icon="refresh" data-theme="b" id="btn-reload" class="ui-btn-right">Recargar</a>
 		</div>
 
 		<div class="principal-content" data-role="content" data-theme="b">
